@@ -561,7 +561,6 @@
             required: true,
             datePattern: 'dd-mm-yyyy',
             onChange: function(){
-                alert('start is changed');
                 loadGanttFromServer();
             }
         }, 'gantt_start_date');
@@ -574,7 +573,6 @@
             required: true,
             datePattern: 'dd-mm-yyyy',
             onChange: function(){
-                alert('end is changed');
                 loadGanttFromServer();
             }
         }, 'gantt_end_date');
